--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -9,29 +9,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
-    <ScrollView
-                android:id="@+id/weather_layout"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
+            android:id="@+id/weather_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:overScrollMode="never">
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="none"
-                android:overScrollMode="never">
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fitsSystemWindows="true">
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true">
 
-                    <include layout="@layout/title" />
+                <include layout="@layout/title" />
 
-                    <include layout="@layout/now" />
+                <include layout="@layout/now" />
 
-                    <include layout="@layout/forcast" />
+                <include layout="@layout/forcast" />
 
-                    <include layout="@layout/aqi" />
+                <include layout="@layout/aqi" />
 
-                    <include layout="@layout/suggestion" />
-                </LinearLayout>
-
-    </ScrollView>
+                <include layout="@layout/suggestion" />
+            </LinearLayout>
+        </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
