--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -5,30 +5,35 @@
     android:layout_height="wrap_content"
     android:layout_margin="15dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="80dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/title_city"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="5"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="99dp"
+            android:gravity="center"
             android:textColor="#fff"
+            android:text="重庆"
             android:textSize="60sp" />
 
         <TextView
             android:id="@+id/degree_text"
-            android:layout_width="wrap_content"
+            android:layout_weight="5"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
+            android:text="10℃"
+            android:gravity="center"
             android:textColor="#fff"
             android:textSize="60sp" />
-    </RelativeLayout>
+    </LinearLayout>
     <TextView
         android:id="@+id/weather_info_text"
         android:layout_width="wrap_content"
